# Law-Agent

./: .gitignore  README.md  RewrittenQuery.py  lawgentic_data_count.xlsx  main.py  process_data.py  pyproject.toml  qdrant-deployment.yaml  regexProblem.txt  request_logs.json  request_logs.jsonl  requirements.txt  server.py  test_qdrant_cloud.py  testregex.py  vectorqdrant.py
