[project]
name = "lawgentic"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "blinker==1.9.0",
    "certifi==2025.7.14",
    "click==8.2.1",
    "colorama==0.4.6",
    "distro==1.9.0",
    "flask==3.1.1",
    "flask-cors==6.0.1",
    "grpcio==1.74.0",
    "gunicorn>=23.0.0",
    "h11==0.16.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "lxml==6.0.0",
    "markupsafe==3.0.2",
    "numpy==2.3.2",
    "openai==1.99.6",
    "portalocker==3.2.0",
    "protobuf==6.31.1",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "python-docx==1.2.0",
    "pywin32==311",
    "qdrant-client==1.15.1",
    "sniffio==1.3.1",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "werkzeug==3.1.3",
]
